--- a/voice-assistant/night-mode.yaml
+++ b/voice-assistant/night-mode.yaml
@@ -5,6 +5,12 @@
 # Created: August 2nd, 2024
 ####################################################################################################
 
+## Usage ##
+# Include this file as a package under the voice assistant yaml as shown below
+# packages:
+#   esphome.voice-assistant: github://esphome/firmware/wake-word-voice-assistant/esp32-s3-box-3.yaml@main
+#   night-mode: github://npnicholson/firmware/voice-assistant/night-mode.yaml@master
+
 binary_sensor:
   - platform: template
     id: night_mode_controller
