Added restore mode information to the night mode switch

--- a/voice-assistant/esp32-s3-box/night-mode.yaml
+++ b/voice-assistant/esp32-s3-box/night-mode.yaml
@@ -60,6 +60,7 @@ switch:
     id: night_mode_switch
     icon: mdi:weather-night
     optimistic: True
+    restore_mode: RESTORE_DEFAULT_ON
 
     # When night mode is disabled, go ahead and turn the backlight back on
     on_turn_off: 
