--- a/voice-assistant/esp32-s3-box/silence.yaml
+++ b/voice-assistant/esp32-s3-box/silence.yaml
@@ -2,6 +2,10 @@
 # Silence for the esp32-s3-box variants ESPHome voice assistant
 # @see: https://github.com/esphome/firmware/blob/main/wake-word-voice-assistant/esp32-s3-box-3.yaml
 # 
+# Silences the voice assistant by removing speaker, on_tts_steam_start, and on_tts_stream_end from 
+# the voice assistant component. Also waits for the voice assistant to be idle before restoring the
+# display to its idle page (this is normally done in on_tts_stream_end).
+#
 # Created: August 2nd, 2024
 ####################################################################################################
 
@@ -48,6 +52,7 @@ script:
                 id(voice_assistant_phase) = ${voice_assist_idle_phase_id};
             - script.execute: draw_display
 
+# Remove speaker, on_tts_steam_start, and on_tts_stream_end from the voice assistant
 voice_assistant:
   id: va
   speaker: !remove
