--- a/examples/components/avr_ota/avr_ota_example.yaml
+++ b/examples/components/avr_ota/avr_ota_example.yaml
@@ -4,7 +4,7 @@ esphome:
 esp32:
   board: esp32-s3-devkitc-1
   framework:
-    type: arduino
+    type: esp-idf
   variant: esp32s3
 
 external_components:
